// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pipeline matrix snapshots (MAT-1~6) > MAT-1: (release=false, e2e=false) → 4 阶段 1`] = `
{
  "id": "plan-mode",
  "phases": [
    {
      "artifacts": [
        {
          "editable": true,
          "filename": "01-plan.md",
          "label": "实施计划",
        },
      ],
      "deploysPreview": undefined,
      "id": "plan",
      "kind": "ai",
      "label": "规划",
      "mayAwaitGate": undefined,
      "retryable": undefined,
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "review-feedback.md",
          "label": "审核反馈",
        },
        {
          "editable": false,
          "filename": "review-history.json",
          "label": "审核历史",
        },
      ],
      "deploysPreview": undefined,
      "id": "review",
      "kind": "gate",
      "label": "审核",
      "mayAwaitGate": true,
      "retryable": false,
    },
    {
      "artifacts": undefined,
      "deploysPreview": true,
      "id": "build",
      "kind": "ai",
      "label": "实施",
      "mayAwaitGate": undefined,
      "retryable": undefined,
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "02-verify-report.md",
          "label": "验证报告",
        },
      ],
      "deploysPreview": undefined,
      "id": "verify",
      "kind": "ai",
      "label": "验证",
      "mayAwaitGate": undefined,
      "retryable": undefined,
    },
  ],
  "profile": {
    "e2e": false,
  },
}
`;

exports[`Pipeline matrix snapshots (MAT-1~6) > MAT-3: (release=false, e2e=true) → 5 阶段（含 uat） 1`] = `
{
  "id": "plan-mode",
  "phases": [
    {
      "artifacts": [
        {
          "editable": true,
          "filename": "01-plan.md",
          "label": "实施计划",
        },
      ],
      "deploysPreview": undefined,
      "id": "plan",
      "kind": "ai",
      "label": "规划",
      "mayAwaitGate": undefined,
      "retryable": undefined,
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "review-feedback.md",
          "label": "审核反馈",
        },
        {
          "editable": false,
          "filename": "review-history.json",
          "label": "审核历史",
        },
      ],
      "deploysPreview": undefined,
      "id": "review",
      "kind": "gate",
      "label": "审核",
      "mayAwaitGate": true,
      "retryable": false,
    },
    {
      "artifacts": undefined,
      "deploysPreview": true,
      "id": "build",
      "kind": "ai",
      "label": "实施",
      "mayAwaitGate": undefined,
      "retryable": undefined,
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "02-verify-report.md",
          "label": "验证报告",
        },
      ],
      "deploysPreview": undefined,
      "id": "verify",
      "kind": "ai",
      "label": "验证",
      "mayAwaitGate": undefined,
      "retryable": undefined,
    },
    {
      "artifacts": [
        {
          "editable": false,
          "filename": "03-uat-report.md",
          "label": "UAT报告",
        },
      ],
      "deploysPreview": undefined,
      "id": "uat",
      "kind": "ai",
      "label": "UAT验证",
      "mayAwaitGate": undefined,
      "retryable": true,
    },
  ],
  "profile": {
    "e2e": true,
  },
}
`;

exports[`Pipeline matrix snapshots (MAT-1~6) > MAT-5: 2 种组合的 transitions 快照（确认不变） 1`] = `
[
  {
    "action": {
      "kind": "retry-from",
      "maxIterations": 3,
      "resetAttempts": false,
      "targetPhaseId": "build",
    },
    "from": "verify",
    "on": "requestRetryFrom",
  },
  {
    "action": {
      "kind": "suspend",
    },
    "from": "*",
    "on": "awaitGate",
  },
  {
    "action": {
      "kind": "fail-pipeline",
      "retryable": "manual",
    },
    "from": "*",
    "on": "failed",
  },
  {
    "action": {
      "kind": "retry-same-phase",
      "maxAttempts": 3,
    },
    "from": "*",
    "on": "failed",
  },
  {
    "action": {
      "kind": "retry-same-phase",
      "maxAttempts": Infinity,
    },
    "from": "*",
    "on": "failed",
  },
  {
    "action": {
      "kind": "await-async",
    },
    "from": "*",
    "on": "awaitAsync",
  },
  {
    "action": {
      "kind": "advance",
    },
    "from": "*",
    "on": "completed",
  },
]
`;
